Create a custom JRE for the Docker image
Fixes #401